--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           -->
           <a href="https://github.com/claczny/VizBin/blob/master/VizBin-dist.jar?raw=true" id="download-jar" class="button"><span>Download app</span></a>
           <a href="https://github.com/claczny/VizBin" id="view-on-github" class="button"><span>View on GitHub</span></a>
-          <div data-badge-popover="bottom" data-badge-type="donut" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
+          &nbsp;&nbsp;<div data-badge-popover="bottom" data-badge-type="donut" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
         </section>
 
         <hr>
@@ -64,7 +64,7 @@
 
         <h3>
 <a id="the-application" name="the-application" class="anchor" href="#the-application"><span class="octicon octicon-link"></span></a>The application.</h3>
-<p>Great news! The Software article manuscript <a href="http://www.microbiomejournal.com/content/3/1/1/abstract">VizBin - an application for reference-independent visualization and human-augmented binning of metagenomic data</a> is published in Microbiome!!! Happy reading.<div align="center" class='altmetric-embed' data-badge-type='1' data-doi='10.1186/s40168-014-0066-1'></div> </p>
+<p>Great news! The Software article manuscript <a href="http://www.microbiomejournal.com/content/3/1/1/abstract">VizBin - an application for reference-independent visualization and human-augmented binning of metagenomic data</a> is published in Microbiome!!! Happy reading.</p>
 
 <p>The "Download app" button always points to the most recent version of VizBin. The version of VizBin that is part of the manuscript can be downloaded <a href="https://github.com/claczny/VizBin/raw/v0.9/VizBin-dist.jar">here</a>.</p>
 
