Minor. Altmetrics badge.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
           -->
           <a href="https://github.com/claczny/VizBin/blob/master/VizBin-dist.jar?raw=true" id="download-jar" class="button"><span>Download app</span></a>
           <a href="https://github.com/claczny/VizBin" id="view-on-github" class="button"><span>View on GitHub</span></a>
-          &nbsp;&nbsp;<div data-badge-popover="bottom" data-badge-type="1" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
+          <br>
+          <div align="center" data-badge-popover="bottom" data-badge-type="1" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
         </section>
 
         <hr>
