Minor. Altmetrics badge.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <li><a href="#the-concept">The concept</a>
           <hr>
           <li><a href="#acknowledgments">Acknowledgments</a>
+          <li><div data-badge-popover="bottom" data-badge-type="4" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
         </ul>
 
         <section id="downloads" class="clearfix">
@@ -49,7 +50,6 @@
           -->
           <a href="https://github.com/claczny/VizBin/blob/master/VizBin-dist.jar?raw=true" id="download-jar" class="button"><span>Download app</span></a>
           <a href="https://github.com/claczny/VizBin" id="view-on-github" class="button"><span>View on GitHub</span></a>
-          <div data-badge-popover="bottom" data-badge-type="donut" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
         </section>
 
         <hr>
