Minor. Altmetrics badge.

--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,7 @@
           <li><a href="#mullerpinel2014">MullerPinel2014</a>
           <hr>
           <li><a href="#acknowledgments">Acknowledgments</a>
+          <li><div align="center" data-badge-popover="bottom" data-badge-type="4" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
         </ul>
 
         <section id="downloads" class="clearfix">
