--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li><a href="#the-concept">The concept</a>
           <hr>
           <li><a href="#acknowledgments">Acknowledgments</a>
-          <li><div data-badge-popover="bottom" data-badge-type="4" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
+          <li><div align="center" data-badge-popover="bottom" data-badge-type="4" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
         </ul>
 
         <section id="downloads" class="clearfix">
