Minor. Altmetrics badge.

--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
     <style>
     .default-spacer{
             margin-right:10px;
