--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
 <p>You can find news and updates about our application for human-augmented binning here.</p>
 
+<p> The <a href="gallex.html">Gallery</a> contains a collection of visualizations of published metagenomic datasets. More to come there in the future!
+
 <p>Stay tuned for updates!</p>
 
         <h3>
