--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <p>You can find news and updates about our application for human-augmented binning here.</p>
 
-<p>04/02/2015 - In recent years, several metagenomic datasets have been created and published. To demonstrate the versatility, efficiency, and potential of VizBin beyond the original publication, we make visualizations (of at least a bigger subset) of these datasets available for the community in our <a href="gallery.html">Gallery</a>. The addition of more "works" is also envisioned!
+<p><b>04/02/2015</b> - In recent years, several metagenomic datasets have been created and published. To demonstrate the versatility, efficiency, and potential of VizBin beyond the original publication, we make visualizations (of at least a bigger subset) of these datasets available for the community in our <a href="gallery.html">Gallery</a>. The addition of more "works" is also envisioned!
 
 <p>A description of VizBin, the underlying concept etc. can be found below.</p>
 
