--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 <p>You can find news and updates about our application for human-augmented binning here.</p>
 
 <ul>
-    <li><strong>04/02/2015</strong> -  <a href="gallery.html">Gallery</a> added: In recent years, several metagenomic datasets have been created and published. To demonstrate the versatility, efficiency, and potential of VizBin beyond the original publication, we make visualizations (of at least a bigger subset) of these datasets available for the community in our <a href="gallery.html">Gallery</a>. The addition of more "works" is also envisioned!</li>
+    <li><strong>04/02/2015</strong> - <a href="gallery.html">Gallery</a> added: In recent years, several metagenomic datasets have been created and published. To demonstrate the versatility, efficiency, and potential of VizBin beyond the original publication, we make visualizations (of at least a bigger subset) of these datasets available for the community in our <a href="gallery.html">Gallery</a>. The addition of more "works" is also envisioned!</li>
+    <li><strong>20/01/2015</strong> - Manuscript published: Great news! The Software article manuscript <a href="http://www.microbiomejournal.com/content/3/1/1/abstract">VizBin - an application for reference-independent visualization and human-augmented binning of metagenomic data</a> is published in Microbiome!!! Happy reading.
 </ul>
 
 <p>A description of VizBin, the underlying concept etc. can be found below.</p>
@@ -70,7 +71,6 @@
 
         <h3>
 <a id="the-application" name="the-application" class="anchor" href="#the-application"><span class="octicon octicon-link"></span></a>The application.</h3>
-<p>Great news! The Software article manuscript <a href="http://www.microbiomejournal.com/content/3/1/1/abstract">VizBin - an application for reference-independent visualization and human-augmented binning of metagenomic data</a> is published in Microbiome!!! Happy reading.</p>
 
 <p>The "Download app" button always points to the most recent version of VizBin. The version of VizBin that is part of the manuscript can be downloaded <a href="https://github.com/claczny/VizBin/raw/v0.9/VizBin-dist.jar">here</a>.</p>
 
