--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li><a href="#downloads">Downloads</a>
           <li><a href="gallery.html">Gallery</a>
           <hr>
+          <li><a href="#news">News</a>
           <li><a href="#the-application">The application</a>
           <li><a href="#usage">Usage</a>
           <li><a href="#the-concept">The concept</a>
@@ -54,7 +55,7 @@
 
         <hr>
 
-        <section id="main_content">
+        <section id="news">
           <h3>
 <a name="welcome-to-the-vizbin-page" class="anchor" href="#welcome-to-the-vizbin-page"><span class="octicon octicon-link"></span></a>Welcome to the VizBin page.</h3>
 
