--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,7 @@
           <li><a href="#dick2009">Dick2009</a>
           <li><a href="#konstantinidis2009">Konstantinidis2009</a>
           <li><a href="#wrighton2012">Wrighton2012</a>
+          <li><a href="#sharon2012">Sharon2012</a>
           <li><a href="#albertsen2013">Albertsen2013</a>
           <li><a href="#brooks2014">Brooks2014</a>
           <li><a href="#mullerpinel2014">MullerPinel2014</a>
@@ -98,7 +99,7 @@
             <li>Runtime: ~ 2.5 minutes
         </ul>
         </section>
-
+        
         <hr>
 
         <section id="wrighton2012">
@@ -112,6 +113,22 @@
             <li>sequences >= 1,000 nt: 25,278
             <li><a href="gallery/AMFJ01_gt_1000nt.coords">2D embedding</a></li>
             <li>Runtime: ~ 2 minutes
+        </ul>
+        </section>
+
+        <hr>
+
+        <section id="sharon2012">
+        <h3>
+        <a name="sharon2012" class="anchor" href="#sharon2012"><span class="octicon octicon-link"></span></a>Sharon 2012</h3>
+        <img src="gallery/carrol_contigs.chunkified_3000nt.ge_500nt.png" alt="img:sharon2012">
+        <h4>Information</h4>
+        <ul>
+            <li><a href="http://genome.cshlp.org/content/23/1/111.long">Original publication</a></li>
+            <li><a href="http://ggkbase.berkeley.edu/carrol/download?type=contigs">Sequences source</a></li>
+            <li>sequences >= 500 nt and split to have max. length &lt; 6,000 nt: 13,147 
+            <li><a href="gallery/carrol_contigs.chunkified_3000nt.ge_500nt.coords">2D embedding</a></li>
+            <li>Runtime: ~ 1.5 minutes
         </ul>
         </section>
 
