First attempt to add logo as a banner on top.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             margin-right:100px;
     }
     </style>
-    <title>VizBin - Fast and easy human-augmented binning</title>
+    <title></title>
+    <img src="images/vizbin_logo.png" alt="VizBin - Seeing is ... binning" style="width:800px;height:401px;">
   </head>
 
   <body>
