--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             margin-right:100px;
     }
     </style>
-    <title></title>
-    <img src="images/vizbin_logo.png" alt="VizBin - Seeing is ... binning" style="width:800px;height:401px;">
+    <title>VizBin - Seeing is ... binning</title>
   </head>
 
   <body>
@@ -28,8 +27,7 @@
       <div class="inner">
 
         <header>
-          <h1>VizBin</h1>
-          <h2>The fast and easy-to-use application for the visualization and human-augmented binning of metagenomic datasets</h2>
+          <img src="images/vizbin_logo.png" alt="VizBin - Seeing is ... binning" style="width:800px;height:401px;">
         </header>
 
         <ul id=menu>
