Added news-entry about the new logo.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <p>You can find news and updates about our application for human-augmented binning here.</p>
 
 <ul>
+    <li><strong>22/10/2015</strong> - Awesome logo added. Thanks a lot to <a href="https://www.researchgate.net/profile/Linda_Wampach">Linda Wampach </a> (designer of the <a href="https://github.com/mothur/logo">mothur logo</a>) </li>
     <li><strong>04/02/2015</strong> - <a href="gallery.html">Gallery</a> added: In recent years, several metagenomic datasets have been created and published. To demonstrate the versatility, efficiency, and potential of VizBin beyond the original publication, we make visualizations (of at least a bigger subset) of these datasets available for the community in our <a href="gallery.html">Gallery</a>. The addition of more "works" is also envisioned!</li>
     <li><strong>20/01/2015</strong> - Manuscript published: Great news! The Software article manuscript <a href="http://www.microbiomejournal.com/content/3/1/1/abstract">VizBin - an application for reference-independent visualization and human-augmented binning of metagenomic data</a> is published in Microbiome!!! Happy reading.
 </ul>
