Add PubMed citations link to gh-pages.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <ul id=menu>
           <li><a href="#downloads">Downloads</a>
           <li><a href="gallery.html">Gallery</a>
+          <li><a href="https://www.ncbi.nlm.nih.gov/pubmed?linkname=pubmed_pubmed_citedin&from_uid=25621171">PubMed Citations</a>
           <hr>
           <li><a href="#news">News</a>
           <li><a href="#the-application">The application</a>
