Add Google Scholar citations link to gh-pages.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         <ul id=menu>
           <li><a href="#downloads">Downloads</a>
           <li><a href="gallery.html">Gallery</a>
-          <li><a href="https://www.ncbi.nlm.nih.gov/pubmed?linkname=pubmed_pubmed_citedin&from_uid=25621171">PubMed Citations</a>
           <hr>
           <li><a href="#news">News</a>
           <li><a href="#the-application">The application</a>
@@ -41,6 +40,8 @@
           <li><a href="#the-concept">The concept</a>
           <hr>
           <li><a href="#acknowledgments">Acknowledgments</a>
+          <li><a href="https://www.ncbi.nlm.nih.gov/pubmed?linkname=pubmed_pubmed_citedin&from_uid=25621171">PubMed Citations</a>
+          <li><a href="https://scholar.google.lu/scholar?oi=bibs&hl=en&cites=11444719814110877353&as_sdt=5">Google Scholar Citations</a>
           <li><div align="center" data-badge-popover="bottom" data-badge-type="4" data-doi="10.1186/s40168-014-0066-1" data-hide-no-mentions="true" class="altmetric-embed"></div>
         </ul>
 
